--- a/static/style2.css
+++ b/static/style2.css
@@ -1,12 +1,12 @@
 H1{
 background-color:royalblue;
-color:blue;
-border:blue;
-text-align:center;
-font:50px serif;
- border-color: blue;
+border-style: outset;
+    border-color: blue;
     border-width: thick;
     border-radius: 15px;
+color:blue;
+text-align:center;
+font:50px serif;
 }
 body{
 background-color:lightskyblue;
@@ -22,4 +22,20 @@ border-style: outset;
     border-color: blue;
     border-width: thick;
     border-radius: 15px;
+}
+img{
+width:300px;
+height:200px
+}
+table{
+border-style: outset;
+    border-color: blue;
+    border-width: thick;
+    border-radius: 15px;
+padding:9px,
+}
+td{
+border:2px solid blue;
+color:blue;
+background-color:royalblue;
 }
