--- a/static/styleform.css
+++ b/static/styleform.css
@@ -1,31 +1,49 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: lightskyblue;
+font-family: Arial, Helvetica, sans-serif;
+margin: 0;
+padding: 0;
+background-color: #f2f2f2;
 }
 h1{
-    text-align: center;
-    color:blue;
+text-align: center;
 }
 form{
-    max-width: 400px;
-    margin: 20px;
-    background-color: royalblue;
-    padding: 20px;
-     border-style: outset;
-    border-radius: 15px;
-    border-color: blue;
-    box-shadow: 0 0 10px rgb(0, 0, 255);
+max-width: 400px;
+margin: 20px auto;
+background-color: #fff;
+padding: 20px;
+border-radius: 15px;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 label,
 input{
-    display: block;
-    margin-bottom: 5px;
+display: block;
+margin-bottom: 10px;
 }
 input[type="text"],
-input[type="email"],
 input[type="number"],
-input[type="color"],
+input[type="email"],
 input[type="password"],
-input[type="date"],
+input[type="date"]{
+width: 95%;
+padding: 10px;
+border: 1px solid #ccc;
+border-radius: 5px;
+}
+input[type="color"]{
+width: 95%;
+border: 1px solid #ccc;
+border-radius: 5px;
+}
+input[type="submit"]{
+    width:100%;
+    padding: 10px;
+    border:none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: #fff;
+    cursor:pointer;
+}
+input[type="submit"]:hover{
+    background-color: #0056b3;
+}
